--- a/WeCare/home/templates/admin_home.html
+++ b/WeCare/home/templates/admin_home.html
@@ -17,6 +17,7 @@
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/home/adminhome/">Home</a></li>
+                    <li class="active"><a href="/dashboard/gotodashboard/">Statistics</a></li>
                     <li class="active"><a href="/home/news/">News</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
                     <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
