--- a/WeCare/home/templates/search.html
+++ b/WeCare/home/templates/search.html
@@ -29,9 +29,9 @@
                 <ul class="nav navbar-nav">
                     <!--<li class="active"><img src="logo.png" width="10%" height="10%"></li>-->
                     <li class="active"><a href="/home/">Home</a></li>
-                    <li class="active"><a href="news/">News</a></li>
+                    <li class="active"><a href="/home/news/">News</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
-                    <li class="active"><a href="/covid19Data/getcoronaupdates/">Corona Virus Updates</a></li>
+                    <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
                 </ul>
               </div>
             </div>
