--- a/WeCare/home/templates/admin_home.html
+++ b/WeCare/home/templates/admin_home.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static 'home/css/doctor_home.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </head>
@@ -29,31 +31,55 @@
         <div><br><br><br><br><br><br><br></div>
 
         <div class="container-fluid text-center">
-            <br>
+            <br><br><br>
             <div class="row slideanim">
-              <div class="col-sm-6">
+              <div class="col-sm-3">
                 <span class="glyphicon glyphicon-plus logo-small"></span>
                 <h4>ADD NEW HOSPITAL</h4>
                 <p><a href="/hospital/gethospitalinfo/">Add A New Hospital</a></p>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-3">
                 <span class="glyphicon glyphicon-new-window logo-small"></span>
                 <h4>MODIFY INFORMATION</h4>
                 <p><a href="/hospital/viewhospital/">Modify existing information</a></p>
               </div>
-            </div><br><br><br>
 
-            <div class="row slideanim">
-              <div class="col-sm-6">
+              <div class="col-sm-3">
                 <span class="	glyphicon glyphicon-search logo-small"></span>
                 <h4>SEARCH HOSPITAL</h4>
-                <p><a href="{% url 'hospitalsearch' %}">Search Hospital </a></p>
+                <p><a href="/hospital/gethospital">Search Hospital </a></p>
               </div>
-              
-              <div class="col-sm-6">
+
+              <div class="col-sm-3">
                 <span class="glyphicon glyphicon-trash logo-small"></span>
                 <h4>DELETE HOSPITAL</h4>
                 <p><a href="/hospital/viewhospital">Delete Hospital</a></p>
+              </div>
+            </div><br><br><br>
+
+            <div class="row slideanim">
+              <div class="col-sm-3">
+                <span class="glyphicon glyphicon-plus logo-small"></span>
+                <h4>ADD NEW PHARMACY</h4>
+                <p><a href="/pharmacy/getpharmacyinfo/">Add A New Pharmacy</a></p>
+              </div>
+
+              <div class="col-sm-3">
+                <span class="glyphicon glyphicon-new-window logo-small"></span>
+                <h4>MODIFY INFORMATION</h4>
+                <p><a href="/pharmacy/viewpharmacy/">Modify existing information</a></p>
+              </div>
+
+              <div class="col-sm-3">
+                <span class="	glyphicon glyphicon-search logo-small"></span>
+                <h4>SEARCH PHARMACY</h4>
+                <p><a href="/pharmacy/getpharmacy">Search Pharmacy </a></p>
+              </div>
+              
+              <div class="col-sm-3">
+                <span class="glyphicon glyphicon-trash logo-small"></span>
+                <h4>DELETE PHARMACY</h4>
+                <p><a href="/pharmacy/viewpharmacy">Delete Pharmacy</a></p>
               </div>
             </div><br><br><br>
 
