--- a/WeCare/home/templates/doctor_home.html
+++ b/WeCare/home/templates/doctor_home.html
@@ -9,18 +9,20 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static 'home/css/doctor_home.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </head>
     <body style="background-image: url('{% static 'home/images/doctor_home-background.png' %}')">
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse" style="position: fixed;width: 100%;">
             <div class="container-fluid">
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/home/doctorhome">Home</a></li>
                     <li class="active"><a href="#">Services</a></li>
-                    <li class="active"><a href="#">FAQ's</a></li>
-                    <li class="active"><a href="/covid19Data/getcoronaupdates">Corona Virus Updates</a></li>
+                    <li class="active"><a href="/FAQ/viewFAQ/">FAQ's</a></li>
+                    <li class="active"><a href="/covid19Data/getoption">Corona Virus Updates</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="/logintosite/logout">Logout</a></li>
@@ -34,66 +36,59 @@
             <center><h2 style="font-weight: bold; color: brown;">{{msg}}</h2></center>
             {% endif %}
             <div class="row slideanim">
-              <div class="col-sm-6">
+              <div class="col-sm-3">
                 <span class="glyphicon glyphicon-plus logo-small"></span>
                 <h4>ADD NEW DISEASE</h4>
                 <p><a href="/Diseases/getdiseaseinfo/">Insert About A New Disease</a></p>
               </div>
-              <div class="col-sm-6">
-                <span class="glyphicon glyphicon-plus logo-small"></span>
-                <h4>ADD DISEASE TREATMENT</h4>
-                <p><a href="/Diseases/getdiseasetreatmentinfo/">Insert About A Disease Treatment</a></p>
-              </div>
-            </div><br><br><br>
-
-            <div class="row slideanim">
-              <div class="col-sm-6">
+              <div class="col-sm-3">
                 <span class="glyphicon glyphicon-new-window logo-small"></span>
                 <h4>MODIFY INFORMATION</h4>
                 <p><a href="/Diseases/viewdiseases/">Modify existing information</a></p>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-3">
                 <span class="glyphicon glyphicon-trash logo-small"></span>
                 <h4>DELETE A DISEASE</h4>
                 <p><a href="/Diseases/viewdiseases">Delete Existing Diseases</a></p>
               </div>
-            </div><br><br><br>
-
-            <div class="row slideanim">
-              <div class="col-sm-6">
-                <span class="glyphicon glyphicon-plus logo-small"></span>
-                <h4>ADD SKINDISEASE WITH IMAGE</h4>
-                <p><a href="/Diseases/getskindiseaseinfo/">Add Images for skin diseases</a></p>
-              </div>
-              <div class="col-sm-6">
-                <span class="glyphicon glyphicon-new-window logo-small"></span>
-                <h4>VIEW SKINDISEASE IMAGES</h4>
-                <p><a href="/Diseases/viewskindiseases/">View SkinDiseases</a></p>
-              </div>
-            </div><br><br><br>
-
-            <div class="row slideanim">
-              <div class="col-sm-6">
+              <div class="col-sm-3">
                 <span class="	glyphicon glyphicon-search logo-small"></span>
                 <h4>SEARCH DISEASES</h4>
                 <p><a href="{% url 'searchpage' %}">Search Diseases </a></p>
               </div>
-              <div class="col-sm-6">
+            </div><br><br><br>
+
+            <div class="row slideanim">
+              <div class="col-sm-3">
+                <span class="glyphicon glyphicon-plus logo-small"></span>
+                <h4>ADD DISEASE TREATMENT</h4>
+                <p><a href="/Diseases/getdiseasetreatmentinfo/">Insert About A Disease Treatment</a></p>
+              </div>
+              <div class="col-sm-3">
+                <span class="glyphicon glyphicon-plus logo-small"></span>
+                <h4>ADD SKINDISEASE WITH IMAGE</h4>
+                <p><a href="/Diseases/getskindiseaseinfo/">Add Images for skin diseases</a></p>
+              </div>
+              <div class="col-sm-3">
+                <span class="glyphicon glyphicon-new-window logo-small"></span>
+                <h4>VIEW SKINDISEASE IMAGES</h4>
+                <p><a href="/Diseases/viewskindiseases/">View SkinDiseases</a></p>
+              </div>
+              <div class="col-sm-3">
                 <span class="glyphicon glyphicon-search logo-small"></span>
                 <h4>SEARCH FOR DISEASE TREATMENT </h4>
                 <p><a href="{% url 'treatmentsearchpage' %}">Look for treatment by disease name</a></p>
               </div>
-              
             </div><br><br><br>
 
             <div class="row slideanim">
-              <div class="col-sm-6 ">
+              <div class="col-sm-3 ">
                 <span class="glyphicon glyphicon-user logo-small"></span>
                 <h4>YOUR PROFILE</h4>
                 <p><a href="/home/getprofile/">View Your Profile</a></p>
               </div>
              
-              <div class="col-sm-6 ">
+              <div class="col-sm-3 ">
                 <span class="glyphicon glyphicon-th logo-large"></span>
                 <h4>FIND OTHER DOCTORS</h4>
                 <p><a href="/home/viewdoctorprofiles/">View Other Doctor Profiles</a></p>
