Hospital module updated

--- a/WeCare/hospital/templates/addhospitalinfo.html
+++ b/WeCare/hospital/templates/addhospitalinfo.html
@@ -56,6 +56,13 @@
                             <td><br><br></td>
                         </tr>
                         <tr>
+                            <td>Pincode</td>
+                            <td><input type="text" name="pincode" placeholder="Location" recquired></td>
+                        </tr>
+                        <tr>
+                            <td><br><br></td>
+                        </tr>
+                        <tr>
                             <td>Speciality</td>
                             <td><input type="text" name="speciality" placeholder="Speciality" recquired></td>
                         </tr>
