--- a/WeCare/hospital/templates/hospitalsearchresults.html
+++ b/WeCare/hospital/templates/hospitalsearchresults.html
@@ -43,6 +43,8 @@
                 {{d.address}}
                 <h3 class="heading">Location</h3>
                 {{d.location}}
+                <h3 class="heading">Pincode</h3>
+                {{d.pincode}}
                 <h3 class="heading">Speciality</h3>
                 {{d.speciality}}
                 <h3 class="heading">Timings</h3>
