--- a/WeCare/hospital/templates/updatehospitalinfo.html
+++ b/WeCare/hospital/templates/updatehospitalinfo.html
@@ -45,6 +45,10 @@
                                 <td><input type="text" name="location" value="{{hosp.location}}" required><br/></td>
                             </tr>
                             <tr>
+                                <td>Pincode</td>
+                                <td><input type="text" name="pincode" value="{{hosp.pincode}}" required><br/></td>
+                            </tr>
+                            <tr>
                                 <td>Speciality</td>
                                 <td><input type="text" name="speciality" value="{{hosp.speciality}}" required><br/><br/></td>
                             </tr>
