--- a/WeCare/hospital/templates/viewhospital.html
+++ b/WeCare/hospital/templates/viewhospital.html
@@ -33,6 +33,7 @@
                         <th>Name</th>
                         <th>Address</th>
                         <th>Location</th>
+                        <th>Pincode</th>
                         <th>Speciality</th>
                         <th>Timings</th>
                         <th></th>
@@ -44,6 +45,7 @@
                             <td width="7%">{{h.name}}</td>
                             <td width="40%">{{h.address}}</td>
                             <td width="15%">{{h.location}}</td>
+                            <td width="15%">{{h.pincode}}</td>
                             <td width="10%">{{h.speciality}}</td>
                             <td width=12%>{{h.timings}}</td>
                             <td width="7%">
