--- a/WeCare/dashboard/templates/dashboard1.html
+++ b/WeCare/dashboard/templates/dashboard1.html
@@ -1,85 +1,167 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>Admin Dashboard</title>
-        <script src="https://cdn.flexmonster.com/flexmonster.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <link rel="stylesheet" href="https://cdn.flexmonster.com/demo.css">
+        <title>Statistics Dashboard</title>
+        {% load static %}
+        <link rel="icon" href="{% static 'home/images/logo.png' %}" type="image/icon type">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{% static 'home/css/doctor_home.css' %}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     </head>
-    <body>
-        <div id="pivot-table-container" data-url="{% url 'pivot_data' %}"></div>
-        <div id="pivot-chart-container"></div>
-        <script>
-            function processData(dataset){
-                var result=[]
-                dataset=JSON.parse(dataset);
-                dataset.forEach(item => {result.push(item.fields)   
-                });
-                return result;
-            }
+    <body style="background-image: url('{% static 'logintosite/images/background.png' %}')">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/home/adminhome/">Home</a></li>
+                    <li class="active"><a href="/dashboard/gotodashboard/">Statistics</a></li>
+                    <li class="active"><a href="/home/news/">News</a></li>
+                    <li class="active"><a href="#">FAQ's</a></li>
+                    <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                  <li class="active"><a href="/logintosite/logout/">Logout</a></li>
+                </ul>
+        </nav>
+        <div>
+            <br/>
+            <select id="charttype" >
+                <option value="bar">bar</option>
+                <option value="pie">pie</option>
+                <option value="line">line</option>
+                <option value="doughnut">doughnut</option>
+                <option value="horizontalBar">horizontalBar</option>
+            </select>
+            <button type="button" class="btn btn-dark renderChart">Display as chart</button>
+            <button type="button" class="btn btn-dark gridview">Display as grid</button>
+            <br>
+            <!-- <button type="button" class="btn btn-primary" onclick="location.href='/dashboard/export_pdf/'">Export pdf</button> -->
+            <button type="button" class="btn btn-success" onclick="location.href='/dashboard/export_csv/'">Export csv</button>
+        </div>
+        <div class="container-fluid text-center">
             
-            $.ajax({
-                    url:$("#pivot-table-container").attr("data-url"),
-                    dataType:'json',
-                    success:function(data){
-                        new Flexmonster({
-                            container:'#pivot-table-container',
-                            componentFolder:"https://cdn.flexmonster.com/",
-                            width:"100%",
-                            height:430,
-                            toolbar:true,
-                            report:{
-                                dataSource: {
-                                type: "json",
-                                data: processData(data),
-                                mapping: {
-                                    "symptom": {
-                                        "caption": "symptom"
-                                    },
-                                    "searchcount": {
-                                        "caption": "searchcount",
-                                        "type":"number"
-                                    }
-                                }
+            <div style="width: 75%; height: fit-content;">
+                <canvas class="myChart"></canvas>
+            </div>
+            {% if tabledata %}
+            <table class="table" border="1px" >
+                <thead>
+                    <th>Sr. No.</th>
+                    <th>Symptoms</th>
+                    <th>Search Count</th>
+                </thead>
+                <tbody>
+                    
+                        {% for d in tabledata %}
+                            <tr>
+                                <td>
+                                    {{forloop.counter}}
+                                </td>
+                                <td>
+                                    {{d.symptom}}
+                                </td>
+                                <td>
+                                    {{d.searchcount}}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                </tbody>
+            </table>
+            {% endif %}
+        </div>
+        <!-- <script src="{% static 'dashboard/js/displaychart.js' %}"></script> -->
+        <script type="text/javascript">
+            var myChart=null;
+            const renderBarChart=(type)=>{
+                console.log("chart type=",type);
+                var ctx=document.querySelector(".myChart").getContext("2d");
+                var canv=document.querySelector(".myChart");
+                ctx.clearRect(0, 0, canv.width, canv.height);
+                canv.style.visibility="visible";
+                var tbl=document.querySelector(".table");
+                tbl.style.visibility="hidden";
+                myChart=new Chart(ctx,{
+                    type:type,
+                    data:{
+                        labels:{{label|safe}},
+                        datasets:[
+                            {
+                                label:"searchcount for Most 5 searched symtomps",
+                                data:{{data|safe}},
+                                backgroundColor: [
+                                    "red",
+                                    "blue",
+                                    "orange",
+                                    "green",
+                                    "yellow",
+                                ],
+                                borderColor: [
+                                    "red",
+                                    "blue",
+                                    "orange",
+                                    "green",
+                                    "yellow",
+                                ],
+                                borderWidth:1, 
                             },
-                                slice:{
-                                    
+                        ],
+                    },
+                    options:{
+                        title:{
+                            display:true,
+                            text:"Searchcount for symptoms",
+                        },
+                        scales:{
+                            yAxes:[{
+                                ticks:{
+                                    beginAtZero:true
                                 }
-                            }
-                        });
-                        new Flexmonster({
-                            container:'#pivot-chart-container',
-                            componentFolder:"https://cdnflexmonster.com/",
-                            width:"100%",
-                            height:430,
-                            //toolbar:true,
-                            report:{
-                                dataSource: {
-                                    type: "json",
-                                    data: processData(data),
-                                    mapping: {
-                                        "symptom": {
-                                            "caption": "symptom"
-                                        },
-                                        "searchcount": {
-                                            "caption": "searchcount",
-                                            "type":"number"
-                                        }
-                                    }
-                                },
-                                slice:{
-                                    "options":{
-                                        "viewtype":"charts",
-                                        "chart":{
-                                            "type":"pie"
-                                        }
-                                    }
+                            }],
+                            xAxes:[{
+                                ticks:{
+                                    beginAtZero:true
                                 }
-                            }
-                        });
-                    }
-                })
+                            }]
+                        }
+                    },
+                });
+            }; 
+            const btn1=document.querySelector(".renderChart");
+            btn1.addEventListener("click",function(){
+                // selectElement =  document.querySelector('#charttype');    
+                // output = selectElement.value;
+                // renderBarChart(output);
+                var index =  document.getElementById('charttype').selectedIndex;
+                var value=document.getElementById('charttype').options;
+                renderBarChart(value[index].text);
+            });
+            // selectElement=document.querySelector('#charttype');
+            // selectElement.addEventListener("change",renderBarChart(selectElement.value))
+            const btn2=document.querySelector(".gridview");
+            btn2.addEventListener("click",function(){
+                // var canv=document.getElementById("myChart");
+                // canv.style.visibility="hidden";
+                // canv.setAttribute("height","0px");
+                if(myChart!=null){
+                    myChart.destroy();
+                }
+                // const context = document.querySelector(".chartjs-render-monitor").getContext('2d');
+                // var canv=document.querySelector(".chartjs-render-monitor");
+                // context.clearRect(0, 0, canv.width, canv.height);
+                // context.beginPath();
+                // canv.style.visibility="hidden";
+                var tbl=document.querySelector(".table");
+                tbl.style.visibility="visible";
+            })
         </script>
+        
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     </body>
 </html>
