--- a/WeCare/logintosite/templates/login.html
+++ b/WeCare/logintosite/templates/login.html
@@ -25,6 +25,16 @@
                     border-radius: 0;
                     background-color: black;
                 }
+                .togglePassword{
+                    cursor: pointer;
+                    transition: all;
+                }
+                .togglePassword:hover{
+                    cursor: pointer;
+                    transition: all;
+                    font-weight: bold;
+                    font-size: large;
+                }
         </style>
     </head>
     <body style="background-image: url('{% static 'logintosite/images/background.png' %}')";>
@@ -53,7 +63,8 @@
                             <h4 style="color:#990000;">*{{msg}}</h4>
                             {% endif %}
                             <input type='email' id="username" name="email" placeholder="emailID" required><br><br>
-                            <input type='password' id="password" name="password" placeholder="Password" required><br>
+                            <input type='password' id="password" style="display: inline-block;" name="password" placeholder="Password" required/><p class="togglePassword" style="display: inline-block;">SHOW</p><br>
+                            
                             <button id="login" name="login" type="submit">Login</button><br>
                             <a href="#">Forget Password</a><br><br><br><br>
                         </form>
@@ -61,6 +72,7 @@
                 </div>
             </div>
         </div>
+        <script src="{% static 'logintosite/js/login.js' %}"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
